[package]
name = "goldboot"
version = "0.0.0"
edition = "2021"

[dependencies]
clap = { version = "3.1.2", features = ["derive"] }
env_logger = "0.9"
hex = "0.4.3"
log = { version = "0.4.11", default-features = false }
quick-xml = {version = "0.22.0", features = ["serialize"] }
reqwest = {version = "0.11.9", features=["blocking", "stream"]}
serde = {version="1",features = ["derive"]}
serde_json = "1"
sha2 = { version="0.10.2"}
sha1 = "0.10.1"
tempfile = "3.3.0"
validator = { version = "0.12", features = ["derive"] }
rust-embed = "6.3.0"
sysinfo = "0.23.5"
qcow = { version="1.2.0", default-features = false }
simple-error = "0.2.3"
whoami = "1.2.1"
bzip2-rs = "0.1.2"
vnc = "0.4"
indicatif = "0.16.2"
rand = "0.8.5"
png = "0.17.5"
colored = "2"