[profile.release]
strip = true

[workspace]
members = [
  "goldboot",
  "goldboot-image",
  "goldboot-linux",
  "goldboot-macros",
  "goldboot-registry",
]

[workspace.dependencies]
anyhow = "1.0.76"
fossable = "0.1.2"
hex = "0.4.3"
rand = "0.9.0"
regex = "1.10.2"
serde = { version = "1.0.192", features = ["derive"] }
sha2 = "0.10.8"
strum = { version = "0.27.1", features = ["derive"] }
tracing = "0.1.40"
zstd = "0.13.0"
reqwest = "0.12.15"
