[profile.release]
strip = true

[workspace]
members = ["goldboot", "goldboot-image", "goldboot-macros", "goldboot-registry"]

[workspace.dependencies]
anyhow = "1.0.76"
fossable = "0.1.2"
hex = "0.4.3"
rand = "0.10.1"
regex = "1.10.2"
serde = { version = "1.0.192", features = ["derive"] }
sha2 = "0.11.0"
strum = { version = "0.28.0", features = ["derive"] }
tracing = "0.1.40"
zstd = "0.13.0"
reqwest = "0.13.4"
roniker = { version = "0.3.0" }
