[package]
name = "goldboot-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
log = { version = "0.4.11", default-features = false }
anyhow = { version = "1.0", default-features = false}
clap = { version = "3.1.2", features = ["derive"] }
tempfile = "3.3.0"
serde = {version="1",features = ["derive"]}
serde_json = "1"
validator = { version = "0.12", features = ["derive"] }
sha2 = "0.10.2"
env_logger = "0.9"
quick-xml = "0.22.0"
hex = "0.4.3"
reqwest = {version = "0.11.9"}