[package]
name = "goldboot"
description = "A command-line application for building goldboot images"
version = "0.0.1"
edition = "2021"
license = "AGPL-3.0-only"
authors = ["Tyler Cook"]
readme = "README.md"
homepage = "https://goldboot.org"
repository = "https://github.com/goldboot/goldboot/"

[dependencies]
chrono = "0.4.19"
clap = { version = "3.1.2", features = ["derive"] }
colored = "2"
env_logger = "0.9"
goldboot-core = { path="../goldboot-core" }
indicatif = "0.16.2"
log = { version = "0.4.11", default-features = false }
reqwest = { version = "0.11.9", features=["blocking"] }
serde = { version="1",features = ["derive"] }
serde_json = "1"
simple-error = "0.2.3"
tempfile = "3.3.0"
ubyte = "0.10.1"
validator = { version = "0.12", features = ["derive"] }