[package]
name = "goldboot-core"
version = "0.1.0"
edition = "2021"

[features]
progressbars = []

[dependencies]
bzip2-rs = "0.1.2"
colored = "2"
env_logger = "0.9"
hex = "0.4.3"
indicatif = "0.16.2"
log = { version = "0.4.11", default-features = false }
png = "0.17.5"
quick-xml = { version = "0.22.0", features = ["serialize"] }
rand = "0.8.5"
reqwest = { version = "0.11.9", features=["blocking", "stream"] }
rust-embed = "6.3.0"
serde = { version="1",features = ["derive"] }
serde_json = "1"
sha1 = "0.10.1"
sha2 = "0.10.2"
simple-error = "0.2.3"
ssh2 = "0.9"
tempfile = "3.3.0"
ubyte = "0.10.1"
validator = { version = "0.12", features = ["derive"] }
vnc = "0.4"
whoami = "1.2.1"