[package]
name = "goldboot-graphics"
description = "Contains goldboot icons and logos"
version = "0.0.1"
edition = "2021"
license = "AGPL-3.0-only"
authors = ["Tyler Cook"]
readme = "README.md"
homepage = "https://goldboot.org"
repository = "https://github.com/goldboot/goldboot/"

[dependencies]
quick-xml = {version = "0.26.0", features = ["serialize"] }
serde = {version="1",features = ["derive"]}