[package]
name = "goldboot-gui"
version = "0.1.0"
edition = "2021"

[dependencies]
block-utils = "0.10.6"
env_logger = "0.9"
goldboot-core = { path="../goldboot-core" }
goldboot-image = { path="../goldboot-image" }
gtk4 = "0.4.7"
log = { version = "0.4.11", default-features = false }
rust-embed = "6.3.0"
serde = { version="1",features = ["derive"] }
serde_json = "1"