[package]
name = "goldboot-gui"
description = "A graphical application for deploying goldboot images"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"
authors = ["Tyler Cook"]
readme = "README.md"
homepage = "https://goldboot.org"
repository = "https://github.com/goldboot/goldboot/"

[dependencies]
block-utils = "0.10.6"
env_logger = "0.9"
goldboot-core = { path="../goldboot-core" }
gtk4 = "0.4.7"
log = { version = "0.4.11", default-features = false }
rust-embed = "6.3.0"
serde = { version="1",features = ["derive"] }
serde_json = "1"
ubyte = "0.10.1"