[package]
authors = ["Tyler Cook"]
description = "Defines the goldboot image format"
edition = "2021"
homepage = "https://goldboot.fossable.org"
license = "AGPL-3.0-only"
name = "goldboot-image"
repository = "https://github.com/fossable/goldboot"
rust-version = "1.74"
version = "0.0.4"

[dependencies]
aes-gcm = { version = "0.10.3", features = ["std"] }
anyhow = "1.0.76"
binrw = "0.13.1"
flate2 = "1.0.28"
hex = "0.4.3"
rand = "0.8.5"
regex = "1.10.2"
serde = { version = "1.0.209", features = ["derive"] }
sha2 = "0.10.8"
strum = { version = "0.26.1", features = ["derive"] }
tracing = "0.1.40"
zstd = "0.13.0"

[dev-dependencies]
sha1 = "0.10.6"
tempfile = "3.8.1"
test-log = { version = "0.2.16", features = ["trace"] }
