[package]
authors = ["Tyler Cook"]
description = "Defines the goldboot image format"
edition = "2024"
homepage = "https://goldboot.fossable.org"
license = "AGPL-3.0-only"
name = "goldboot-image"
repository = "https://github.com/fossable/goldboot"
rust-version = "1.85"
version = "0.0.5"

[dependencies]
aes-gcm = { version = "0.10.3", features = ["std"] }
anyhow = { workspace = true }
binrw = "0.14.1"
flate2 = "1.0.28"
hex = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
strum = { workspace = true }
tracing = { workspace = true }
zstd = { workspace = true }

[dev-dependencies]
sha1 = "0.10.6"
tempfile = "3.8.1"
test-log = { version = "0.2.16", features = ["trace"] }
