[package]
name = "goldboot-linux"
description = "A minimal Linux distribution for deploying goldboot images"
version = "0.0.1"
edition = "2021"
license = "AGPL-3.0-only"
authors = ["Tyler Cook"]
readme = "README.md"
homepage = "https://goldboot.org"
repository = "https://github.com/goldboot/goldboot/"

[dependencies]
block-utils = "0.11.1"
env_logger = "0.10.0"
gdk-pixbuf = "0.18.3"
gdk4 = "0.7.3"
glib-macros = "0.18.3"
goldboot = { path="../goldboot", version = "0.0.1" }
gtk4 = "0.7.3"
log = { version = "0.4.20", default-features = false }
rust-embed = "8.0.0"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
ubyte = "0.10.4"
