[package]
authors = ["Tyler Cook"]
description = "Supporting macros for goldboot"
edition = "2024"
license = "Unlicense"
name = "goldboot-macros"
rust-version = "1.85"
version = "0.0.3"
repository = "https://github.com/fossable/goldboot"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.33"
syn = "2.0.113"
