[package]
name = "goldboot-registry"
description = "A web service for hosting goldboot images"
version = "0.0.5"
edition = "2024"
license = "Unlicense"
authors = ["Tyler Cook"]
readme = "README.md"
homepage = "https://goldboot.org"
repository = "https://github.com/fossable/goldboot"
rust-version = "1.85"

[dependencies]
anyhow = "1.0.76"
axum = "0.8.3"
clap = { version = "4.4.7", features = ["derive", "string"] }
goldboot-image = { path = "../goldboot-image", version = "0.0.5" }
goldboot = { path = "../goldboot", version = "0.0.10" }
reqwest = { workspace = true, features = ["stream"] }
tftpd = { version = "0.5.0", optional = true }
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[features]
pxe = ["dep:tftpd"]
