[package]
name = "goldboot-registry"
description = "A web service for hosting goldboot images"
version = "0.0.5"
edition = "2024"
license = "Unlicense"
authors = ["Tyler Cook"]
readme = "README.md"
homepage = "https://goldboot.org"
repository = "https://github.com/fossable/goldboot"
rust-version = "1.85"

[dependencies]
anyhow = { workspace = true }
axum = { version = "0.8.1", features = ["macros"] }
clap = { version = "4.4.7", features = ["derive", "string"] }
futures-util = "0.3"
goldboot = { path = "../goldboot", default-features = false }
goldboot-image = { path = "../goldboot-image", version = "0.0.5" }
hex = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
tokio = { version = "1.34.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["io", "io-util"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["limit", "trace", "set-header"] }
tftpd = { version = "1.0.0", optional = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dev-dependencies]
binrw = "0.15.0"
portpicker = "0.1"
reqwest = { workspace = true, features = ["blocking", "json", "rustls"] }
serde_json = "1"
sha2 = { workspace = true }
tempfile = "3.8.1"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
zstd = { workspace = true }

[features]
pxe = ["dep:tftpd"]
