[package]
name = "goldboot-templates"
version = "0.1.0"
edition = "2021"

[dependencies]
colored = "2"
env_logger = "0.9"
goldboot-core = { path="../goldboot-core" }
log = { version = "0.4.11", default-features = false }
reqwest = { version = "0.11.9", features=["blocking", "stream"] }
rust-embed = "6.3.0"
serde = { version="1",features = ["derive"] }
serde_json = "1"
simple-error = "0.2.3"
validator = { version = "0.12", features = ["derive"] }
whoami = "1.2.1"