[package]
authors = ["Tyler Cook"]
description = "A command-line application for building goldboot images"
edition = "2024"
homepage = "https://goldboot.org"
license = "AGPL-3.0-only"
name = "goldboot"
readme = "README.md"
repository = "https://github.com/fossable/goldboot"
rust-version = "1.85"
version = "0.0.10"

[dependencies]
anyhow = { workspace = true }
# It seems the next LTS will have a clang version new enough for bindgen
# aws-lc-rs = { version = "1", features = ["bindgen"]}
axum = { version = "0.8.1", optional = true }
built = { version = "0.8.0", features = ["chrono", "semver"] }
byte-unit = "5.1.2"
chrono = "0.4.31"
clap = { version = "4.4.7", features = ["derive", "string"] }
console = "0.15.7"
dialoguer = "0.11.0"
enum_dispatch = "0.3.12"
fatfs = { version = "0.3.6", optional = true }
flate2 = "1.0.28"
fossable = { workspace = true }
fscommon = { version = "0.1.1", optional = true }
goldboot-image = { path = "../goldboot-image", version = "0.0.5" }
goldboot-macros = { path = "../goldboot-macros", version = "0.0.3" }
hex = { workspace = true }
indicatif = "0.17.7"
png = { version = "0.17.10", optional = true }
# cross environments need to be updated with python
# pyo3 = { version = "0.21.2", features = ["extension-module"] }
quick-xml = { version = "0.37.2", features = ["serialize"] }
rand = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true, features = ["stream", "blocking", "json"] }
ron = "0.10.1"
rustls = { version = "0.23.23" }
serde_json = "1.0.108"
serde = { workspace = true }
serde_win_unattend = { version = "0.3.3", optional = true }
serde_yaml = "0.9.27"
sha1 = "0.10.6"
sha2 = { workspace = true }
# TODO russh
ssh2 = { version = "0.9.4" }
ssh-key = { version = "0.7.0-pre.1", features = ["ed25519"] }
strum = { workspace = true }
tar = "0.4.40"
tempfile = "3.10.0"
tokio = { version = "1.36.0", features = ["full"] }
toml = "0.8.13"
tower-http = { version = "0.5.2", features = ["fs", "trace"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
ubyte = "0.10.4"
url = { version = "2.4.1", features = ["serde"] }
uuid = { version = "1.7.0", features = ["v4"] }
validator = { version = "0.20.0", features = ["derive"] }
vnc = { version = "0.4.0", optional = true }
whoami = "1.4.1"
zstd = { workspace = true }

[dev-dependencies]

[build-dependencies]
built = { version = "0.8.0", features = [
  "cargo-lock",
  "dependency-tree",
  "git2",
  "chrono",
  "semver",
] }

[features]
default = ["cast", "include_ovmf"]

# Support for registry server
registry = []

# Support for casting images
cast = [
  "dep:fatfs",
  "dep:fscommon",
  "dep:png",
  "dep:vnc",
  "dep:serde_win_unattend",
  "dep:axum",
]

# Bundled OVMF firmware
include_ovmf = []
