[package]
authors = ["Tyler Cook"]
description = "A command-line application for building goldboot images"
edition = "2024"
homepage = "https://goldboot.org"
license = "Unlicense"
name = "goldboot"
readme = "README.md"
repository = "https://github.com/fossable/goldboot"
rust-version = "1.85"
version = "0.0.10"

[dependencies]
anyhow = { workspace = true }
# It seems the next LTS will have a clang version new enough for bindgen
# aws-lc-rs = { version = "1", features = ["bindgen"]}
axum = { version = "0.8.1", optional = true }
block-utils = { version = "0.11.1", optional = true }
built = { version = "0.8.0", features = ["chrono", "semver"] }
byte-unit = "5.1.2"
chrono = "0.4.31"
clap = { version = "4.5.54", features = ["derive", "string"] }
console = "0.16.1"
dialoguer = "0.12.0"
eframe = { version = "0.33.3", optional = true, default-features = false, features = [
  "default_fonts",
  "glow",
  "persistence",
] }
egui = { version = "0.33.3", optional = true }
enum_dispatch = "0.3.12"
fatfs = { version = "0.3.6", optional = true }
flate2 = "1.0.28"
fossable = { workspace = true }
fscommon = { version = "0.1.1", optional = true }
goldboot-image = { path = "../goldboot-image", version = "0.0.5" }
goldboot-macros = { path = "../goldboot-macros", version = "0.0.3" }
hex = { workspace = true }
image = { version = "0.25", optional = true, default-features = false, features = [
  "png",
] }
indicatif = "0.18.0"
png = { version = "0.18.0", optional = true }
poll-promise = { version = "0.3", optional = true }
quick-xml = { version = "0.38.3", features = ["serialize"] }
rand = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true, features = ["stream", "blocking", "json"] }
ron = { version = "0.12", optional = true }
rustls = { version = "0.23.23" }
serde_json = { version = "1.0.108", optional = true }
serde = { workspace = true }
serde_win_unattend = { version = "0.3.3", optional = true }
smart-default = "0.7.1"
sha1 = "0.10.6"
sha2 = { workspace = true }
# TODO russh
ssh2 = { version = "0.9.4" }
ssh-key = { version = "0.7.0-pre.1", features = ["ed25519"] }
strum = { workspace = true }
tar = "0.4.40"
tempfile = "3.10.0"
tokio = { version = "1.36.0", features = ["full"] }
tower-http = { version = "0.6.6", features = ["fs", "trace"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
ubyte = "0.10.4"
url = { version = "2.4.1", features = ["serde"] }
uuid = { version = "1.7.0", features = ["v4"] }
validator = { version = "0.20.0", features = ["derive"] }
vnc = { version = "0.4.0", optional = true }
whoami = "1.4.1"
zstd = { workspace = true }

[dev-dependencies]

[build-dependencies]
built = { version = "0.8.0", features = [
  "cargo-lock",
  "dependency-tree",
  "git2",
  "chrono",
  "semver",
] }

[features]
default = ["build", "include_ovmf"]

# Support for registry server
registry = []

# Support for building images
build = [
  "dep:ron",
  "dep:serde_json",
  "dep:fatfs",
  "dep:fscommon",
  "dep:png",
  "dep:vnc",
  "dep:serde_win_unattend",
  "dep:axum",
]

# Bundled OVMF firmware
include_ovmf = []

# GUI support using egui/eframe
gui = [
  "dep:eframe",
  "dep:egui",
  "dep:image",
  "dep:poll-promise",
  "dep:block-utils",
]

# UKI (Unified Kernel Image) mode - GUI with automatic reboot
uki = ["gui"]
